specify target in rc file per comment in GH issue
https://github.com/FirebaseExtended/action-hosting-deploy/issues/112#issuecomment-1875316791

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "xiphonics-web"
+  },
+  "targets": {
+    "xiphonics-web": {
+      "hosting": {
+        "ptmanual": [
+          "picotracker-manual"
+        ]
+      }
+    }
   }
 }
