--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,4 +18,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_XIPHONICS_WEB }}
           channelId: live
           projectId: xiphonics-web
-          target: ptmanual
+          target: picotracker-manual
