update firebase rc using firebase cli cmd

--- a/.firebaserc
+++ b/.firebaserc
@@ -5,10 +5,12 @@
   "targets": {
     "xiphonics-web": {
       "hosting": {
-        "ptmanual": [
+        "xiphonics-web": [
           "picotracker-manual"
         ]
       }
     }
-  }
+  },
+  "etags": {},
+  "dataconnectEmulatorConfig": {}
 }
